syntax = "proto3";
package youliao.pdu.group;
import "youliao.base.proto";

message GroupCreateRequest
{
    uint32 user_id = 1;
    string group_name = 2;
    string group_head = 3;
    youliao.pdu.base.GroupType group_type = 4;
    youliao.pdu.base.GroupVerifyType group_verify_type = 5;
    repeated uint32 member_ids = 6;
    uint32 group_max_members = 7;
}

message GroupCreateRespone{
    uint32 user_id = 1;
    uint32 result_code = 2;
    youliao.pdu.base.GroupInfo group_info = 3;
}

message GetGroupListRequest
{
    uint32 user_id = 1;
}

message GetGroupListRespone
{
    uint32 user_id = 1;
    repeated youliao.pdu.base.GroupInfo group_info = 2;
}

//获取群成员信息
message GetGroupMemberInfoRequest
{
    uint32 user_id = 1;
    uint32 group_id = 2;
}

message GetGroupMemberInfoRespone
{
    uint32 user_id = 1;
    uint32 group_id = 2;
    repeated youliao.pdu.base.MemberInfo member_infos = 3;
}

//修改群名片
message ModifyGroupCard
{
    uint32 user_id = 1;
    uint32 group_id = 2;
    string group_card = 3;
}

//搜索群组
message SearchGroupRequest
{
    uint32 user_id = 1;
    string search_data = 2;
    youliao.pdu.base.SearchType search_type = 3;  //搜索类型
}


message SearchGroupRespone
{
    uint32 user_id = 1;
    repeated youliao.pdu.base.GroupInfo groups = 2; //该组下的好友
}

//请求添加群
message AddGroupRequest
{
    uint32 user_id = 1;
    uint32 group_id = 2;
}



//踢出去

//退群

//修改群公告
